--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -56,6 +56,8 @@
             color: $color-gray;
             text-decoration: none;
             white-space: nowrap;
+            height: auto;
+            line-height: 1.4;
 
             &:hover {
                 color: $color-black;
